tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_metaprogramming_comptime_code_rejects_dynamic_variable/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Non-comptime variable `x` referenced in comptime code
  ┌─ src/main.nr:3:32
  │
3 │         comptime let my_var = (x - x) + 2;
  │                                - Non-comptime variables can't be used in comptime code
  │

Aborting due to 1 previous error
