tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_metaprogramming_comptime_code_rejects_dynamic_variable/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Non-comptime variable `x` referenced in comptime code
  ┌─ src/main.nr:3:32
  │
3 │         comptime let my_var = (x - x) + 2;
  │                                - Non-comptime variables can't be used in comptime code
  │

Aborting due to 1 previous error
